Added configuration for the Wiki languages. Updated the poms for Linux and Maven 3.
git-svn-id: http://ikube.googlecode.com/svn/trunk@899 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/war/build.properties
+++ b/code/war/build.properties
@@ -5,8 +5,8 @@ sleep=30
 
 target.directory=target
 
-tomcat=/usr/local/apache-tomcat-7.0.25
-tomcat.bin=${tomcat}/bin
+tomcat=/var/lib/tomcat7/webapps
+tomcat.bin=/usr/share/tomcat7/bin
 tomcat.webapps=${tomcat}/webapps
 
 cluster.directory=/usr/local/cluster
