--- a/code/core/pom.xml
+++ b/code/core/pom.xml
@@ -3,11 +3,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation=" http://maven.apache.org/POM/4.0.0    http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>ikube</groupId>
 	<artifactId>ikube-core</artifactId>
 	<packaging>jar</packaging>
-	<version>3.0.1-SNAPSHOT</version>
-
 	<properties>
 		<main.class>ikube.Ikube</main.class>
 		<project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>
@@ -124,6 +121,11 @@
 				</dependencies>
 			</plugin>
 		</plugins>
+		<pluginManagement>
+			<plugins>
+				
+			</plugins>
+		</pluginManagement>
 	</build>
 	
 </project>
