Fixed some unit and integration tests. Finished the integration configuration.
git-svn-id: http://ikube.googlecode.com/svn/trunk@900 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/conf/common/spring.properties
+++ b/code/core/src/main/resources/conf/common/spring.properties
@@ -12,9 +12,7 @@ merge.factor=100
 buffered.docs=100
 max.field.length=1000
 max.read.length=1000000
-# \\\\Ikube\\D\\cluster\\apache-tomcat-6.0.29-1\\bin\\indexes
-index.directory.path=ikube/indexes
-# \\\\Ikube\\D\\cluster\\indexes\\backup
+index.directory.path=/media/nas/ikube/indexes
 index.directory.path.backup=${index.directory.path}/backup
 jdbc.batch.size=10000
 internet.batch.size=1000
@@ -41,7 +39,7 @@ url.million=http://localhost:8080/million/adapt.html
 faq.predicate=where faq.faqid < 10000000 and published = 1
 patient.predicate=where patient.id > 0
 files.path=./code/core/src/test/resources/data/files
-files.path.million=/usr/local/cluster/apache-tomcat-6.0.26-1
+files.path.million=/media/nas/xfs
 files.excluded.pattern=.*(.svn).*|.*(.db).*|.*(.gif).*|.*(.svg).*|.*(.jpg).*|.*(.exe).*|.*(.dll).*|.*(password).*|.*(enwiki-latest-pages-articles).*|.*(RSA).*|.*(MANIFEST).*
 internet.excluded.pattern=.*(.zip).*|.*(.png).*|.*(/search).*|.*(/images).*|.*(wiki).*|.*(r=).*|.*(.war).*|.*(terminate).*|.*(startup).*
 
@@ -60,9 +58,6 @@ max.age.geospatial=7200
 ikube.url=http://localhost/ikube/index.html
 ikube.url.8080=http://localhost:8080/ikube
 ikube.url.8080.login=${ikube.url.8080}/admin/login.html
-ikube.url.9000=http://localhost:9000/ikube/index.html
-ikube.url.dyndns=http://ikube.dyndns.org:8080/ikube/index.html
-ikube.google.code=http://code.google.com/p/ikube/
 
 # The H2 database credentials
 h2.jdbc.userid=sa
@@ -150,15 +145,7 @@ ikube.dataBaseClass=ikube.database.jpa.DataBaseJpa
 activemq.port=61617
 activemq.destination=composite.destination
 
-language.word.lists.directory=ikube/languages
-language.word.lists.directory.index=ikube/languages/index
+language.word.lists.directory=./ikube/languages
+language.word.lists.directory.index=./ikube/languages/index
 
-searcher.web.service.port=8081
-searcher.web.service.port.xml=8082
-searcher.web.service.path=/ikube/service/SearcherWebService?wsdl
-searcher.web.service.path.xml=/ikube/service/SearcherWebServiceXml?wsdl
-
-monitor.web.service.port=8083
-monitor.web.service.path=/ikube/service/MonitorWebService?wsdl
-
-searcher.web.service.url=http://ikube:${searcher.web.service.port}${searcher.web.service.path}
+searcher.web.service.url=http://ikube.dyndns.org:8080/ikube/service/search/multi/spatial
