--- a/code/war/build.xml
+++ b/code/war/build.xml
@@ -70,34 +70,31 @@
 	</target>
 	
 	<target name="clean.servers">
-		<!-- Delete the index directories in the cluster. -->
-		<!-- antcall target="clean.server">
-			<param name="directory" value="${tomcat.bin}" />
+		<!-- Clean all the ikube files in the servers. -->
+		<antcall target="clean.server">
+			<param name="directory" value="${tomcat}" />
 		</antcall>
 		<antcall target="clean.server">
-			<param name="directory" value="${tomcat.webapps}" />
-		</antcall -->
-		<!-- antcall target="clean.server">
-			<param name="directory" value="${tomcat.1.bin}" />
+			<param name="directory" value="${tomcat.1}" />
 		</antcall>
 		<antcall target="clean.server">
 			<param name="directory" value="${tomcat.2}" />
 		</antcall>
 		<antcall target="clean.server">
 			<param name="directory" value="${tomcat.3}" />
-		</antcall -->
+		</antcall>
 	</target>
 
 	<target name="deploy">
 		<!-- Deploy the ikube war into the cluster. -->
 		<copy file="${target.directory}/${ikube.war}" todir="${tomcat.webapps}" overwrite="true" failonerror="false" />
-		<!-- copy file="${target.directory}/${ikube.war}" todir="${tomcat.1.webapps}" overwrite="true" failonerror="false" />
+		<copy file="${target.directory}/${ikube.war}" todir="${tomcat.1.webapps}" overwrite="true" failonerror="false" />
 		<copy file="${target.directory}/${ikube.war}" todir="${tomcat.2.webapps}" overwrite="true" failonerror="false" />
 		<copy file="${target.directory}/${ikube.war}" todir="${tomcat.3.webapps}" overwrite="true" failonerror="false" />
 		<copy file="${target.directory}/${ikube.war}" todir="${jboss.1.deploy}" overwrite="true" failonerror="false" />
 		<copy file="${target.directory}/${ikube.war}" todir="${glassfish.1.deploy}" overwrite="true" failonerror="false" />
 		<copy file="${target.directory}/${ikube.war}" todir="${oc4j.1.deploy}" overwrite="true" failonerror="false" />
-		<copy file="${target.directory}/${ikube.war}" todir="${weblogic.1.deploy}" overwrite="true" failonerror="false" / -->
+		<copy file="${target.directory}/${ikube.war}" todir="${weblogic.1.deploy}" overwrite="true" failonerror="false" />
 	</target>
 
 	<target name="clean.server">
@@ -140,18 +137,18 @@
 		<echo>User home: ${user.home}</echo>
 		<copy file="${configuration.directory}/${ikube.configuration.jar}" todir="./src/main/webapp/docs" failonerror="true" />
 		<unjar src="${configuration.directory}/${ikube.configuration.jar}" dest="${tomcat.bin}" overwrite="true" />
-		<!-- unjar src="${configuration.directory}/${ikube.configuration.jar}" dest="${tomcat.1.bin}" overwrite="true" />
+		<unjar src="${configuration.directory}/${ikube.configuration.jar}" dest="${tomcat.1.bin}" overwrite="true" />
 		<unjar src="${configuration.directory}/${ikube.configuration.jar}" dest="${tomcat.2.bin}" overwrite="true" />
 		<unjar src="${configuration.directory}/${ikube.configuration.jar}" dest="${tomcat.3.bin}" overwrite="true" />
 		<unjar src="${configuration.directory}/${ikube.configuration.jar}" dest="${jboss.1.bin}" overwrite="true" />
 		<unjar src="${configuration.directory}/${ikube.configuration.jar}" dest="${glassfish.1.bin}" overwrite="true" />
 		<unjar src="${configuration.directory}/${ikube.configuration.jar}" dest="${oc4j.1.bin}" overwrite="true" />
-		<unjar src="${configuration.directory}/${ikube.configuration.jar}" dest="${weblogic.1.bin}" overwrite="true" / -->
+		<unjar src="${configuration.directory}/${ikube.configuration.jar}" dest="${weblogic.1.bin}" overwrite="true" />
 		<replace dir="${tomcat.bin}" value="61615">
 			<include name="**/spring.properties" />
 			<replacetoken><![CDATA[61617]]></replacetoken>
 		</replace>
-		<!-- replace dir="${tomcat.2.bin}" value="61618">
+		<replace dir="${tomcat.2.bin}" value="61618">
 			<include name="**/spring.properties" />
 			<replacetoken><![CDATA[61617]]></replacetoken>
 		</replace>
@@ -174,7 +171,7 @@
 		<replace dir="${weblogic.1.bin}" value="61623">
 			<include name="**/spring.properties" />
 			<replacetoken><![CDATA[61617]]></replacetoken>
-		</replace -->
+		</replace>
 	</target>
 
 	<target name="startUbuntu">
