--- a/code/war/build.properties
+++ b/code/war/build.properties
@@ -5,8 +5,8 @@ sleep=30
 
 target.directory=target
 
-tomcat=/var/lib/tomcat7/webapps
-tomcat.bin=/usr/share/tomcat7/bin
+tomcat=/usr/share/apache-tomcat-7.0.27
+tomcat.bin=${tomcat}/bin
 tomcat.webapps=${tomcat}/webapps
 
 cluster.directory=/usr/share/cluster
@@ -45,3 +45,6 @@ jenkins.home=/usr/local/apache-tomcat-7.0.25
 jenkins.bin=${jenkins.home}/bin
 
 configuration.directory=./target/configuration
+
+tomcat.unpacked=apache-tomcat-7.0.27
+tomcat.gzip=apache-tomcat-7.0.27.tar.gz
