--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 		<site>
 			<id>ikube</id>
 			<name>ikube-releases</name>
-			<url>file:/home/michael/.m2/repository</url>
+			<url>file:/root/.m2/repository</url>
 		</site>
 		<repository>
 			<id>ikube</id>
@@ -48,6 +48,7 @@
 
 		<war.base.root>code/war/target/ikube</war.base.root>
 		<postgresql.driver.version>8.4-701.jdbc4</postgresql.driver.version>
+		<jetty.version>6.1.11</jetty.version>
 	</properties>
 
 	<modules>
@@ -109,15 +110,9 @@
 								</pluginExecution>
 								<pluginExecution>
 									<pluginExecutionFilter>
-										<groupId>
-											org.codehaus.mojo
-										</groupId>
-										<artifactId>
-											openjpa-maven-plugin
-										</artifactId>
-										<versionRange>
-											[1.2,)
-										</versionRange>
+										<groupId>org.codehaus.mojo</groupId>
+										<artifactId>openjpa-maven-plugin</artifactId>
+										<versionRange>[1.2,)</versionRange>
 										<goals>
 											<goal>enhance</goal>
 										</goals>
@@ -128,19 +123,11 @@
 								</pluginExecution>
 								<pluginExecution>
 									<pluginExecutionFilter>
-										<groupId>
-											org.codehaus.mojo
-										</groupId>
-										<artifactId>
-											properties-maven-plugin
-										</artifactId>
-										<versionRange>
-											[1.0-alpha-1,)
-										</versionRange>
+										<groupId>org.codehaus.mojo</groupId>
+										<artifactId>properties-maven-plugin</artifactId>
+										<versionRange>[1.0-alpha-1,)</versionRange>
 										<goals>
-											<goal>
-												read-project-properties
-											</goal>
+											<goal>read-project-properties</goal>
 										</goals>
 									</pluginExecutionFilter>
 									<action>
@@ -149,15 +136,9 @@
 								</pluginExecution>
 								<pluginExecution>
 									<pluginExecutionFilter>
-										<groupId>
-											org.apache.maven.plugins
-										</groupId>
-										<artifactId>
-											maven-antrun-plugin
-										</artifactId>
-										<versionRange>
-											[1.6,)
-										</versionRange>
+										<groupId>org.apache.maven.plugins</groupId>
+										<artifactId>maven-antrun-plugin</artifactId>
+										<versionRange>[1.6,)</versionRange>
 										<goals>
 											<goal>run</goal>
 										</goals>
@@ -739,13 +720,6 @@
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>canyon</groupId>
-			<artifactId>canyon</artifactId>
-			<version>0.9.8</version>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
 			<groupId>aspose</groupId>
 			<artifactId>aspose.words</artifactId>
 			<version>7.0.0</version>
@@ -799,7 +773,7 @@
 			<artifactId>htmlunit</artifactId>
 			<version>2.9</version>
 			<type>jar</type>
-			<scope>compile</scope>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.ehcache</groupId>
@@ -812,27 +786,28 @@
 			<groupId>org.apache.activemq</groupId>
 			<artifactId>activemq-core</artifactId>
 			<version>5.5.0</version>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.batch</groupId>
 			<artifactId>spring-batch-core</artifactId>
 			<version>2.1.8.RELEASE</version>
 			<type>jar</type>
-			<scope>compile</scope>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.batch</groupId>
 			<artifactId>spring-batch-admin-manager</artifactId>
 			<version>1.2.1.RELEASE</version>
 			<type>jar</type>
-			<scope>compile</scope>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.batch</groupId>
 			<artifactId>spring-batch-integration</artifactId>
 			<version>1.2.0.RELEASE</version>
 			<type>jar</type>
-			<scope>compile</scope>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.batch</groupId>
@@ -859,6 +834,7 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-compress</artifactId>
 			<version>1.0</version>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>de.schlichtherle</groupId>
@@ -882,6 +858,36 @@
 			<groupId>org.apache.tiles</groupId>
 			<artifactId>tiles-el</artifactId>
 			<version>2.2.2</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.mortbay.jetty</groupId>
+			<artifactId>jetty-embedded</artifactId>
+			<version>${jetty.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mortbay.jetty</groupId>
+			<artifactId>jetty</artifactId>
+			<version>${jetty.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mortbay.jetty</groupId>
+			<artifactId>start</artifactId>
+			<version>${jetty.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mortbay.jetty</groupId>
+			<artifactId>jetty-util</artifactId>
+			<version>${jetty.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.2.2</version>
 		</dependency>
 	</dependencies>
 
