--- a/code/libs/pom.xml
+++ b/code/libs/pom.xml
@@ -13,7 +13,7 @@
 	<parent>
 		<groupId>ikube</groupId>
 		<artifactId>ikube</artifactId>
-		<version>3.0.1-SNAPSHOT</version>
+		<version>3.1.0</version>
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
 
