Removed some un-used configuration. Updated the GeoSpatial controller to do the route between the points. Did most of the front end for the route information.
git-svn-id: http://ikube.googlecode.com/svn/trunk@925 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/conf/common/spring.properties
+++ b/code/core/src/main/resources/conf/common/spring.properties
@@ -7,7 +7,7 @@ max.age=180
 
 # These parameters are destined for the index context
 buffer.size=128
-compound.file=false
+compound.file=true
 merge.factor=100
 buffered.docs=100
 max.field.length=1000
@@ -21,6 +21,8 @@ file.max.read.length=1000000
 throttle=0
 max.actions=3
 
+max.revisions=1000
+
 # These are client specific for Lucene
 analyzed=true
 stored=true
@@ -31,7 +33,7 @@ vectored=true
 table.handler.threads=3
 internet.handler.threads=3
 filesystem.handler.threads=1
-email.handler.threads=1
+email.handler.threads=3
 
 # These parameters are client specific
 url=http://ikokoon.ikube.cloudbees.net/index.html
