--- a/code/war/pom.xml
+++ b/code/war/pom.xml
@@ -145,6 +145,23 @@
 						</goals>
 					</execution>
 				</executions>
+				<dependencies>
+					<dependency>
+						<groupId>org.apache.ant</groupId>
+						<artifactId>ant-jsch</artifactId>
+						<version>1.8.4</version>
+					</dependency>
+					<dependency>
+						<groupId>org.apache.ant</groupId>
+						<artifactId>ant-commons-net</artifactId>
+						<version>1.8.4</version>
+					</dependency>
+					<dependency>
+						<groupId>ant</groupId>
+						<artifactId>optional</artifactId>
+						<version>1.5.4</version>
+					</dependency>
+				</dependencies>
 			</plugin>
 			
 			<!-- 
@@ -246,7 +263,6 @@
 					</uploads>
 				</configuration>
 			</plugin>
-			
 		</plugins>
 	</build>
 
