--- a/code/war/pom.xml
+++ b/code/war/pom.xml
@@ -14,6 +14,7 @@
 		<jaxrpc.api.version>1.1</jaxrpc.api.version>
 		<jersey.version>1.9.1</jersey.version>
 		<jaxb-api.version>2.2.1</jaxb-api.version>
+		<main.class>ikube.web.Ikube</main.class>
 	</properties>
 
 	<parent>
@@ -33,7 +34,40 @@
 			</resource>
 		</resources>
 		<plugins>
-			
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.3.1</version>
+				<configuration>
+					<verbose>true</verbose>
+					<archive>
+						<index>true</index>
+						<manifest>
+							<addClasspath>true</addClasspath>
+							<classpathPrefix>lib/</classpathPrefix>
+							<mainClass>${main.class}</mainClass>
+						</manifest>
+					</archive>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>copy-dependencies</id>
+						<phase>package</phase>
+						<goals>
+							<goal>copy-dependencies</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>target/lib</outputDirectory>
+							<overWriteReleases>false</overWriteReleases>
+							<overWriteSnapshots>false</overWriteSnapshots>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 			<!-- The default plugin for creating the war, we specify a version. -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -237,7 +271,6 @@
 			<plugin>
 				<groupId>com.googlecode.maven-gcu-plugin</groupId>
 				<artifactId>maven-gcu-plugin</artifactId>
-				<version>1.1</version>
 				<executions>
 					<execution>
 						<id>gcode-upload</id>
@@ -304,10 +337,19 @@
 		</dependency>
 		<dependency>
 			<groupId>org.mortbay.jetty</groupId>
-			<artifactId>jetty-runner</artifactId>
-			<version>7.0.0.v20091005</version>
+			<artifactId>jetty</artifactId>
+			<!-- <version>7.0.0.v20091005</version> -->
+			<version>6.1.11</version>
 			<type>jar</type>
-			<scope>test</scope>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mortbay.jetty</groupId>
+			<artifactId>jetty-util</artifactId>
+			<!-- <version>7.0.0.v20091005</version> -->
+			<version>6.1.11</version>
+			<type>jar</type>
+			<scope>compile</scope>
 		</dependency>
 
 		<dependency>
