Cleaned up the configuration for integration and added the Oracle and Postgres geospatial data.
git-svn-id: http://ikube.googlecode.com/svn/trunk@928 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/conf/common/spring.properties
+++ b/code/core/src/main/resources/conf/common/spring.properties
@@ -85,6 +85,11 @@ oracle.jdbc.password=Caherl1ne
 oracle.jdbc.url=jdbc:oracle:thin:@//ikube.dyndns.org:1521/XE
 oracle.jdbc.driver=oracle.jdbc.driver.OracleDriver
 
+#postgres.jdbc.userid=postgres
+#postgres.jdbc.password=Caherl1ne
+#postgres.jdbc.url=jdbc:postgresql://localhost:5432/test
+#postgres.jdbc.driver=org.postgresql.Driver
+
 #General JDBC settings
 jdbc.minPoolSize=10
 jdbc.maxPoolSize=100
@@ -134,13 +139,13 @@ ikube.dataBaseClass=ikube.database.jpa.DataBaseJpa
 #ikube.dataBaseClass=ikube.database.jpa.DataBaseJpaOracle
 
 # Postgres ikube database
-#ikube.dataSource=nonXaDataSourcePostgres
+#ikube.dataSource=nonXaDataSourcePostgresql
 #ikube.persistenceUnit=IkubePersistenceUnitPostgres
 #ikube.dataSourceType=POSTGRESQL
-#ikube.jdbc.userid=${postgresql.jdbc.userid}
-#ikube.jdbc.password=${postgresql.jdbc.password}
-#ikube.jdbc.url=${postgresql.jdbc.url}
-#ikube.jdbc.driver=${postgresql.jdbc.driver}
+#ikube.jdbc.userid=${postgres.jdbc.userid}
+#ikube.jdbc.password=${postgres.jdbc.password}
+#ikube.jdbc.url=${postgres.jdbc.url}
+#ikube.jdbc.driver=${postgres.jdbc.driver}
 #ikube.jdbc.dictionary=postgres(batchLimit=1000)
 #ikube.dataBaseClass=ikube.database.jpa.DataBaseJpaPostgres
 
