Added default path for the spelling index.
git-svn-id: http://ikube.googlecode.com/svn/trunk@935 89a0fb20-889e-aefa-90f6-7c296b20d5cf

--- a/code/core/src/main/resources/conf/common/spring.properties
+++ b/code/core/src/main/resources/conf/common/spring.properties
@@ -152,7 +152,7 @@ ikube.dataBaseClass=ikube.database.jpa.DataBaseJpa
 activemq.port=61617
 activemq.destination=composite.destination
 
-language.word.lists.directory=./ikube/languages
-language.word.lists.directory.index=./ikube/languages/index
+language.word.lists.directory=./ikube/common/languages
+language.word.lists.directory.index=./ikube/common/languages/index
 
 searcher.web.service.url=http://ikube.dyndns.org:8080/ikube/service/search/multi/spatial
